fix(Card): hr should be visible, close #3281

--- a/src/card/main.scss
+++ b/src/card/main.scss
@@ -178,6 +178,7 @@
         width: 100%;
         margin: 0;
         position: relative;
+        overflow: visible;
         &::before {
             content: '';
             display: block;
